--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
                 </a>
                 <ul class="nav-list">
                     <li class="nav-list-item">
-                        <a class="nav-list-item-link active" href="/goit-markup-hw-06/index.html">Studio</a>
+                        <a class="nav-list-item-link active" href="index.html">Studio</a>
                     </li>
                     <li class="nav-list-item">
-                        <a class="nav-list-item-link" href="/goit-markup-hw-06/portfolio.html">Portfolio</a>
+                        <a class="nav-list-item-link" href="portfolio.html">Portfolio</a>
                     </li>
                     <li class="nav-list-item">
                         <a class="nav-list-item-link" href="#">Contacts</a>
@@ -40,7 +40,7 @@
             </address>
             <button class="menu-toggle js-open-menu" aria-expanded="false" aria-controls="mobile-menu">
                 <svg class="mobile-menu-icon" width="32" height="22">
-                    <use href="/images/svg/icons.svg#icon-menu-hamburger"/>
+                    <use href="images/svg/icons.svg#icon-menu-hamburger"/>
                 </svg>
             </button>
         </div>
@@ -491,28 +491,28 @@
             <li class="mobile-social-media-item">
                 <a class="mobile-social-media-link">
                     <svg class="mobile-social-media-icon-svg" width="24" height="24">
-                        <use href="/images/svg/icons.svg#instagram"/>
+                        <use href="images/svg/icons.svg#instagram"/>
                     </svg>
                 </a>
             </li>
             <li class="mobile-social-media-item">
                 <a class="mobile-social-media-link">
                     <svg class="mobile-social-media-icon-svg" width="24" height="24">
-                        <use href="/images/svg/icons.svg#twitter" />
+                        <use href="images/svg/icons.svg#twitter" />
                     </svg>
                 </a>
             </li>
             <li class="mobile-social-media-item">
                 <a class="mobile-social-media-link">
                     <svg class="mobile-social-media-icon-svg" width="24" height="24">
-                        <use href="/images/svg/icons.svg#facebook" />
+                        <use href="images/svg/icons.svg#facebook" />
                     </svg>
                 </a>
             </li>
             <li class="mobile-social-media-item">
                 <a class="mobile-social-media-link">
                     <svg class="mobile-social-media-icon-svg" width="24" height="24">
-                        <use href="/images/svg/icons.svg#linkedin" />
+                        <use href="images/svg/icons.svg#linkedin" />
                     </svg>
                 </a>
             </li>
