--- a/portfolio.html
+++ b/portfolio.html
@@ -22,10 +22,10 @@
                 </a>
                 <ul class="nav-list">
                     <li class="nav-list-item">
-                        <a class="nav-list-item-link" href="/index.html">Studio</a>
+                        <a class="nav-list-item-link" href="index.html">Studio</a>
                     </li>
                     <li class="nav-list-item">
-                        <a class="nav-list-item-link active" href="/portfolio.html">Portfolio</a>
+                        <a class="nav-list-item-link active" href="portfolio.html">Portfolio</a>
                     </li>
                     <li class="nav-list-item">
                         <a class="nav-list-item-link" href="#">Contacts</a>
