--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </address>
             <button class="menu-toggle js-open-menu" aria-expanded="false" aria-controls="mobile-menu">
                 <svg class="mobile-menu-icon" width="32" height="22">
-                    <use href="images/svg/icons.svg#icon-menu-hamburger"/>
+                    <use href="images/svg/icons.svg#menu-hamburger"/>
                 </svg>
             </button>
         </div>
