--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,7 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-   
+
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
     <title>portfolio</title>
@@ -69,7 +69,8 @@
                         <figure class="portfolio-list-item-figure">
                             <img src="images/bankapp.jpg" alt="Banking App" class="list-item-img">
                             <figcaption>
-                                14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                                14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
+                                App · Exotic Fruit Ecommerce App ·
                                 Cloud Storage App
                             </figcaption>
                         </figure>
@@ -82,10 +83,11 @@
                         <figure class="portfolio-list-item-figure">
                             <img src="images/cashless.jpg" alt="Cashless Payment" class="list-item-img">
                             <figcaption>
-                                14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                                14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
+                                App · Exotic Fruit Ecommerce App ·
                                 Cloud Storage App
                             </figcaption>
-                        </figure>                        
+                        </figure>
                         <div class="list-item-content">
                             <h3 class="list-app-content">Cashless Payment</h3>
                             <p>Marketing</p>
@@ -95,10 +97,11 @@
                         <figure class="portfolio-list-item-figure">
                             <img src="images/meditation.jpg" alt="Meditation" class="list-item-img">
                             <figcaption>
-                                14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                                14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
+                                App · Exotic Fruit Ecommerce App ·
                                 Cloud Storage App
                             </figcaption>
-                        </figure>                
+                        </figure>
                         <div class="list-item-content">
                             <h3 class="list-app-content">Meditation App</h3>
                             <p>App</p>
@@ -108,10 +111,11 @@
                         <figure class="portfolio-list-item-figure">
                             <img src="images/taxi-service.jpg" alt="Taxi Service" class="list-item-img">
                             <figcaption>
-                                14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                                14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
+                                App · Exotic Fruit Ecommerce App ·
                                 Cloud Storage App
                             </figcaption>
-                        </figure>                
+                        </figure>
                         <div class="list-item-content">
                             <h3 class="list-app-content">Taxi Service</h3>
                             <p>Marketing</p>
@@ -121,10 +125,11 @@
                         <figure class="portfolio-list-item-figure">
                             <img src="images/screen-illustration.jpg" alt="Screen Illustration" class="list-item-img">
                             <figcaption>
-                                14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                                14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
+                                App · Exotic Fruit Ecommerce App ·
                                 Cloud Storage App
                             </figcaption>
-                        </figure>                        
+                        </figure>
                         <div class="list-item-content">
                             <h3 class="list-app-content">Screen Illustrations</h3>
                             <p>Design</p>
@@ -134,10 +139,11 @@
                         <figure class="portfolio-list-item-figure">
                             <img src="images/online-courses.jpg" alt="Online Courses" class="list-item-img">
                             <figcaption>
-                                14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                                14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
+                                App · Exotic Fruit Ecommerce App ·
                                 Cloud Storage App
                             </figcaption>
-                        </figure>                        
+                        </figure>
                         <div class="list-item-content">
                             <h3 class="list-app-content">Online Courses</h3>
                             <p>Marketing</p>
@@ -147,10 +153,11 @@
                         <figure class="portfolio-list-item-figure">
                             <img src="images/instagram-stories.jpg" alt="Instagram Stories" class="list-item-img">
                             <figcaption>
-                                14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                                14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
+                                App · Exotic Fruit Ecommerce App ·
                                 Cloud Storage App
                             </figcaption>
-                        </figure>                        
+                        </figure>
                         <div class="list-item-content">
                             <h3 class="list-app-content">Instagram Stories Concept</h3>
                             <p>Design</p>
@@ -160,10 +167,11 @@
                         <figure class="portfolio-list-item-figure">
                             <img src="images/organic-food.jpg" alt="Orgarnic Food" class="list-item-img">
                             <figcaption>
-                                14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                                14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
+                                App · Exotic Fruit Ecommerce App ·
                                 Cloud Storage App
                             </figcaption>
-                        </figure>                        
+                        </figure>
                         <div class="list-item-content">
                             <h3 class="list-app-content">Organic Food</h3>
                             <p>Web Site</p>
@@ -173,10 +181,11 @@
                         <figure class="portfolio-list-item-figure">
                             <img src="images/fresh-coffee.jpg" alt="Fresh Coffee" class="list-item-img">
                             <figcaption>
-                                14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                                14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
+                                App · Exotic Fruit Ecommerce App ·
                                 Cloud Storage App
                             </figcaption>
-                        </figure>                        
+                        </figure>
                         <div class="list-item-content">
                             <h3 class="list-app-content">Fresh Coffee</h3>
                             <p>Web Site</p>
@@ -195,7 +204,8 @@
                     <span class="footer-logo-span">Web</span>Studio
                 </a>
                 <p class="f-logo-text">
-                    Increase the flow of customers and<br>sales for your business with digital<br>marketing & growth solutions.
+                    Increase the flow of customers and<br>sales for your business with digital<br>marketing & growth
+                    solutions.
                 </p>
             </div>
 
@@ -234,7 +244,7 @@
                     </li>
                 </ul>
             </div>
-            
+
             <div class="subscribe">
                 <h3 class="subscribe-title">
                     Subscribe
