--- a/index.html
+++ b/index.html
@@ -35,18 +35,19 @@
                     </li>
                 </ul>
 
-                <button type="button" class="menu-toggle js-open-menu" aria-expanded="false" aria-controls="mobile-menu">
+                <button type="button" class="menu-toggle js-open-menu" aria-expanded="false"
+                    aria-controls="mobile-menu">
                     <svg width="24" height="24">
                         <use href="./images/svg/icons.svg#menu"></use>
                     </svg>
                 </button>
-                
+
                 <address class="header-address d-none">
                     <a href="mailto:info@devstudio.com">info@devstudio.com</a>
                     <a href="tel:+380000000000">+11 (000) 111-11-11</a>
                 </address>
             </nav>
-    
+
         </div>
     </header>
 
@@ -74,7 +75,8 @@
                         </div>
                         <h3>Strategy</h3>
                         <p>
-                            Our goal is to identify the business problem to walk away with the perfect and creative solution.
+                            Our goal is to identify the business problem to walk away with the perfect and creative
+                            solution.
                         </p>
                     </li>
                     <li class="about-list-item">
@@ -85,7 +87,8 @@
                         </div>
                         <h3>Punctuality</h3>
                         <p>
-                            Bring the key message to the brand's audience for the best price within the shortest possible time.
+                            Bring the key message to the brand's audience for the best price within the shortest
+                            possible time.
                         </p>
                     </li>
                     <li class="about-list-item">
@@ -96,7 +99,8 @@
                         </div>
                         <h3>Diligence</h3>
                         <p>
-                            Research and confirm brands that present the strongest digital growth opportunities and minimize risk.
+                            Research and confirm brands that present the strongest digital growth opportunities and
+                            minimize risk.
                         </p>
                     </li>
                     <li class="about-list-item">
@@ -107,7 +111,8 @@
                         </div>
                         <h3>Technologies</h3>
                         <p>
-                            Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
+                            Design practice focused on digital experiences. We bring forth a deep passion for
+                            problem-solving.
                         </p>
                     </li>
                 </ul>
