--- a/portfolio.html
+++ b/portfolio.html
@@ -35,18 +35,19 @@
                     </li>
                 </ul>
 
-                <button type="button" class="menu-toggle js-open-menu" aria-expanded="false" aria-controls="mobile-menu">
+                <button type="button" class="menu-toggle js-open-menu" aria-expanded="false"
+                    aria-controls="mobile-menu">
                     <svg width="24" height="24">
                         <use href="./images/svg/icons.svg#menu"></use>
                     </svg>
                 </button>
-                
+
                 <address class="header-address d-none">
                     <a href="mailto:info@devstudio.com">info@devstudio.com</a>
                     <a href="tel:+380000000000">+11 (000) 111-11-11</a>
                 </address>
             </nav>
-    
+
         </div>
     </header>
 
